02-k8koziknet-httproute-host-chuck.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chuck-host
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: contour
    namespace: projectcontour
  hostnames:
    - "k8s.kozik.net"
  rules:
  - backendRefs:
    - name: chuck-norris-quote-service
      port: 8080
