05-httproute-host-future-path-chuck-hello.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: future-host
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: contour
    namespace: projectcontour
  hostnames:
  - "future.k8s.kozik.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hello
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: hello-world
      port: 80

  - matches:
    - path:
        type: PathPrefix
        value: /chuck
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: chuck-norris-quote-service
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: back2future-quote-service
      port: 8080
