kuard-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  labels:
    app: kuard
spec:
  ingressClassName: contour
  rules:
  - host: kuard.kozik.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 80
  defaultBackend:
    service:
      name: kuard
      port:
        number: 80
